samples/_failures_safe/1761498734_1dc6fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c83ff57a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c83ff57a.c:157:9: error: expected expression at end of input
  157 |         if (
      |         ^~
./samples/SAFE/__tmp_c83ff57a.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c83ff57a.c:157:9: error: expected declaration or statement at end of input
